--- a/d8form/d8form.routing.yml
+++ b/d8form/d8form.routing.yml
@@ -1,14 +1,14 @@
 d8form:
   path: 'd8formpage'
   defaults:
-    _title: 'Drupal 8 Form Page'
+    _title_callback: '\Drupal\d8form\Controller\D8FormController::d8formPageTitle'
     _content: '\Drupal\d8form\Controller\D8FormController::d8formPage'
   requirements:
-    _permission: 'access content'
+    _permission: 'TRUE'
 d8form.form:
   path: 'd8form'
   defaults:
-    _title: 'Drupal 8 Form'
+    _title_callback: '\Drupal\d8form\Controller\D8FormController::d8formTitle'
     _form: '\Drupal\d8form\Form\D8Form'
   requirements:
-    _permission: 'access content'
+    _permission: 'TRUE'
