--- a/d8route/d8route.services.yml
+++ b/d8route/d8route.services.yml
@@ -1,5 +1,5 @@
 services:
-  d8route..route_subscriber:
+  d8route.route_subscriber:
     class: Drupal\d8route\Routing\RouteSubscriber
     tags:
       - { name: event_subscriber }
