Training - Day 2 - Define route with paramater

--- a/d8route/d8route.routing.yml
+++ b/d8route/d8route.routing.yml
@@ -1,3 +1,9 @@
 route_callbacks:
   - '\Drupal\d8route\Routing\D8RouteRoutes::routes'
   
+d8route.hellouser:
+  path: 'hello/{user}'
+  defaults:
+    _content: '\Drupal\d8route\Controller\D8RouteController::contentUser'
+  requirements:
+    _permission: 'access content'
